# autonomous_vehicle

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  maze_preview.html
.claude/: settings.local.json
docker/: entrypoint.sh
docs/superpowers/plans/: 2026-05-24-av-sim-gazebo-classic.md
docs/superpowers/specs/: 2026-05-24-av-sim-redesign.md  2026-05-29-pure-pursuit-turn-fix-design.md  2026-05-29-stanley-controller-design.md
src/av_sim/: package.xml  setup.cfg  setup.py
src/av_sim/av_sim/: astar_math.py  astar_planner.py  control_math.py  controller.py  map_manager.py  map_math.py  scan_occupancy.py
src/av_sim/config/: checkpoints.csv  obstacles.csv
src/av_sim/launch/: sim.launch.py
src/av_sim/rviz/: av_sim.rviz
src/av_sim/test/: conftest.py  test_astar.py  test_controller_math.py  test_map_math.py  test_planning_utils.py  test_scan_math.py
src/av_sim/urdf/: robot.urdf
